# kuzushiji-vision

./: .clinerules  .cursorignore  .cursorrules  .gitignore  GUI_annotator.py  LICENSE  README.md  README_en.md  README_test.md  TEST_README.md  character_count_above_threshold.json  character_count_below_threshold.json  config.yaml  count_yolo_dataset.py  data_loader.py  dataset_viewer.py  demo_test_model.py  gui_column_detection.py  ocr_model.py  pretrain_language_model.py  project_structure_ja.md  pyproject.toml  pyproject_rye.toml  quick_test.py  requirements.txt  run.sh  run_gui.bat  specification.txt  test.py  test_language_model.py  test_restoration_feature.py  test_trained_model.py  train.py  train_character_detection.py  train_deberta_tokenizer_unknown.py  train_language_model.py  train_language_model_f.py  train_language_model_scratch.py  train_oneline_ocr.py  train_tokenizer_bigram.py  (+2 more)
.github/: RELEASE_WORKFLOW_TEMPLATE.md
.github/workflows/: auto-create-pull-request.yml  format_on_merge.yml  ruff.yml
config/: inference.yaml  oneline_ocr_config.yaml
config/data/: line_extraction.yaml
config/model/: character_detection.yaml  line_extraction.yaml  llm_correction.yaml
configs/model/: kuzushiji_recognizer.yaml
data/: data_discription.md  unicode_translation.csv
docs/: character_detection_model_architecture.md  character_detection_model_architecture_plan.md  character_detection_model_refinement_plan.md  data_preprocessing.md  line_extraction_test_plan.md  line_extraction_visualization.md  model_architecture.md  parallel_processing_plan.md  train_character_detection_reimplementation_guide.md  transfer_learning_plan.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
models/character_detection/: __init__.py  model.py
models/line_extraction/: model.py
ndl-minhon-ocrdataset/src/: imgdownloader.py  makeonelinedataset.py  makeonelinedataset_multi.py  v1_metadata.csv
notebooks/: Qwen3_VL_(8B)_Vision.ipynb  fix_resize_func.ipynb  test-padding.ipynb  test-padding.py  test_character_extraction.ipynb  test_line_extraction.ipynb  test_preprocessing.ipynb  visualize_annotations.ipynb  visualize_columns.ipynb  visualize_preprocessing.ipynb
ocr_lightning/: dataset.py  model.py  predict.py  requirements.txt  train.py
ocr_lightning/tests/: test_dataset.py  test_model.py
scripts/: analyze_bbox_sizes.py  analyze_text_length.py  calc_dataset_mean_and_std.py  check_images.py  concatenate_files.py  convert_kanji.py  convert_yolo_to_coco.py  count_character.py  count_pages.py  create_bounding_boxes.py  create_chracter_dict.py  create_itaiji_to_hyojun_map.py  create_labels.py  create_line_dataset_from_columns.py  create_multi_grid_dataset.py  create_oneline_datasets.py  create_quadrant_dataset.py  create_small_coco_dataset.py  create_small_test_dataset.py  create_text_files.py  data_loader.py  data_preprocessing.py  data_preprocessv2.py  debug_test.py  download_roboflow_data.py  evaluation.py  format_data.py  get_year.py  infer.py  inferance_language_model.py  inference.py  move_hyphen_images.py  ocr_model.py  padding_data.py  padding_datav2.py  plot_char_counts.py  prepare_column_dataset.py  prepare_yolo_character_dataset.py  prepare_yolo_dataset.py  prepare_yolo_oneline.py  (+36 more)
scripts/templates/: index.html
src/callbacks/: ema.py
src/configs/: evaluation.yaml  preprocessing.yaml
src/configs/data/: character_detection.yaml  line_extraction.yaml  yolo_oneline.yaml
src/configs/model/: character_detection.yaml  character_detection_rfdetr.yaml  character_detection_rfdetr_test.yaml  line_extraction.yaml  trocr_config.yaml  yolo_oneline.yaml
src/data/: dataloader.py  dataset.py  oneline_dataset.py  trocr_dataset.py
src/models/: ocr_lightning.py  trocr_model.py  unet_transformer_encoder.py
src/models/arch/: kuzushiji_recognizer.py
src/models/character_detection/: __init__.py  csa_vit_model.py
src/models/line_extraction/: __init__.py  model.py
src/training/: trainer.py
src/utils/: augmentation.py  image_processing.py  image_resize.py  multi_grid_processor.py  quadrant_processor.py  tokenizer.py  util.py
tests/: test_data_loader.py  test_ocr_model.py  test_train_script.py
trainer/: train_character_detection.py  train_line_extraction.py
utils/: augmentation.py  dataset.py  image_processing.py  metrics.py
yolov12/ultralytics/cfg/models/v12/: yolov12.yaml
yolov12/ultralytics/nn/modules/: block.py
