[project]
name = "kuzushiji-vision"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch==2.5.1+cu124",
    "torchvision==0.20.1+cu124",
    "torchmetrics>=1.0.3",
    "albumentations>=2.0.3",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pyyaml>=6.0.2",
    "tensorboard>=2.18.0",
    "tqdm>=4.66.5",
    "scikit-learn>=1.6.1",
    "opencv-python>=4.11.0.86",
    "timm>=1.0.14",
    "lmdb>=1.6.2",
    "hydra-core>=1.3.2",
    "wandb>=0.19.6",
    "accelerate>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "matplotlib>=3.10.0",
    "japanize-matplotlib>=1.1.3",
    "ipykernel>=6.29.5",
    "ruff==0.9.10",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
type = "index"
