[project]
name = "kuzushiji-vision"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchmetrics==1.0.3",
    "albumentations==1.0.0",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "pyyaml==6.0.2",
    "tensorboard==2.18.0",
    "tqdm==4.66.5",
    "scikit-learn==1.6.1",
    "opencv-python==4.11.0.86",
    "timm==1.0.15",
    "lmdb==1.6.2",
    "hydra-core==1.3.2",
    "wandb==0.19.6",
    "accelerate==1.6.0",
    "ultralytics==8.3.93",
    "transformers[torch]==4.57.0",
    "gradio==5.23.1",
    "scikit-image==0.25.2",
    "einops==0.8.1",
    "jiwer==3.1.0",
    "datasets==3.6.0",
    "tiktoken==0.9.0",
    "blobfile==3.0.0",
    "matplotlib==3.10.0",
    "japanize-matplotlib==1.1.3",
    "ipykernel==6.29.5",
    "jupyter==1.1.1",
    "hatchling==1.27.0",
    "editables==0.5",
    "wheel==0.45.1",
    "lightning==2.5.1.post0",
    "schedulefree==1.4.1",
    "pykakasi==2.3.0",
    "editdistance>=0.8.1",
    "lxml>=5.4.0",
    "nvfuser-cu124-torch26>=0.2.27.dev20250415",
    "lightning-thunder>=0.2.3",
    "rfdetr>=1.3.0",
    "roboflow>=1.2.11",
    "pyarrow>=20.0.0",
    "xformers>=0.0.29.post3",
    "bitsandbytes>=0.48.2",
    "peft>=0.17.1",
    "trl>=0.18.2",
    "triton>=3.2.0",
    "cut-cross-entropy>=25.1.1",
    "unsloth-zoo>=2025.3.1",
    "sentencepiece>=0.2.1",
    "protobuf>=3.20.3",
    "unsloth>=2025.3.3",
    "evaluate>=0.4.6",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
build = ["torch", "setuptools", "packaging"]
compile = ["flash-attn"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.3"
requires-dist = ["torch", "einops"]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo.git" }

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.5",
    "ruff==0.9.10",
    "selenium>=4.33.0",
    "snakeviz==2.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
# 1行の最大文字数
line-length = 127

[tool.ruff.lint]
# チェックするエラーの種類
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
# 除外するエラーの種類
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904", # raise ... from ... になっていない場合のエラーを無視
    "E741",  # ambiguous variable name
    "W293",  # blank line contains whitespace
    "W291",  # trailing whitespace
]

# ファイルごとのエラー除外
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# isort の設定
[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
# Python3.8互換のための設定
keep-runtime-typing = true
